Issue #3355062: Vertical alignment of single on/off checkbox views exposed looks off

--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -116,6 +116,16 @@
     margin-right: var(--gin-spacing-xs);
   }
 
+  // Single on/off checkbox (through Better Exposed Filters)
+  .form-type--boolean.form-type--checkbox {
+    margin-top: auto;
+    margin-bottom: var(--gin-spacing-s);
+
+    .form-item__label {
+      margin-bottom: 0;
+    }
+  }
+
   .fieldset--group {
     margin-top: var(--gin-spacing-s);
   }
